# cafl4ds

./: .copier-answers.yml  .docker.env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  mkdocs.yaml  noxfile.py  pyproject.toml  renovate.json
.claude/: statusline.sh
.github/workflows/: ci.yml  reusable-pipeline.yml
cafl4ds/: eval.py  loop.py  measurements.py  monitor.py  pipeline.py  run_log.py  schedule.py
cafl4ds/configs/: loop.yaml  pipeline.yaml  positive_control.yaml  pretrain.yaml
cafl4ds/configs/data/: stl10.yaml  synthetic.yaml
cafl4ds/configs/encoder/: tiny.yaml
cafl4ds/configs/filter/: accept_all.yaml  dedup.yaml  dedup_reservoir.yaml  loss_gate.yaml  reservoir.yaml
cafl4ds/configs/init/: from_scratch.yaml  pretrained.yaml
cafl4ds/configs/monitor/: default.yaml
cafl4ds/configs/optim/: adamw.yaml
cafl4ds/configs/schedule/: warmup_cosine.yaml
cafl4ds/configs/ssl/: mae.yaml  simsiam.yaml
cafl4ds/configs/stream/: class_blocked.yaml  iid.yaml
cafl4ds/data/: sources.py  streams.py
cafl4ds/filters/: accept_all.py  base.py  composite.py  dedup.py  loss_gate.py  reservoir.py
cafl4ds/models/: heads.py  vit.py
cafl4ds/ssl/: augment.py  base.py  factory.py  mae.py  simsiam.py
docker/: Dockerfile  gaudi.env.Dockerfile
docs/: developing.md  project-plan.md  reference.md  user-guide.md
docs/experiments/: latest-results.md  latest_results.md
docs/experiments/latest-results/: P0.1.md  P0.2.1.md  P0.2.md  index.md
docs/experiments/phase0/: P0.1.md  P0.2.1.md  P0.2.md  index.md  instrument.md  positive_control_1.md  positive_control_2.md
docs/javascripts/: mathjax.js
docs/project-plan/: building-blocks.md  experiments.md  index.md  metrics.md  novelty.md  reading-list.md  risks.md
scripts/: bump.py  example.py  gaudi_simple_test.py  positive_control.py  pretrain.py  run_gaudi_dev.sh  run_loop.py
tests/unit/: test_eval.py  test_filters.py  test_loop.py  test_measurements.py  test_models.py  test_monitor.py  test_pipeline.py  test_schedule.py  test_ssl.py  test_streams.py
