[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cafl4ds"
dynamic = ["version"] # Tells Hatchling to calculate this dynamically
description = "Continuous, Active Federated Learning for Data Streams"
authors = [{name = "Mauricio Munoz", email = "mauricio.munoz@ai.se"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/aidotse/cafl4ds"
Documentation = "https://aidotse.github.io/cafl4ds"

# Main (runtime) dependencies
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
# Optional runtime feature: Hardware support for Gaudi HPUs
# Install with: `uv sync --extra gaudi` (or `pip install .[gaudi]`)
gaudi = [
    "optimum-habana==1.20.0",
]

[dependency-groups]
# Local dev tooling (not shipped with the package)
# Install with: `uv sync --group agent`
agent = [
    "headroom-ai[code,html,mcp,otel,proxy,relevance,reports,spreadsheet]>=0.27.0",
]

dev = [
    "pytest>=8.3.3",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "mypy>=1.12.1",
    "ruff>=0.7.0",
    "pre-commit>=4.0.1",
    "poethepoet>=0.29.0",
    "coverage>=7.6.4",
    "nox>=2024.4.15",
    "deptry>=0.20.0",
    "commitizen>=3.29.0",
    "mkdocs-material>=9.5.42",
    "mkdocstrings[python]>=0.26.0",
    "genbadge[coverage,tests]>=1.1.1",
]

# Tools configs -------------------------------------------------------------------------------------------------------

[tool.poe]
shell_interpreter = "bash"
verbosity = 1

[tool.hatch.version]
source = "vcs" # Use git tags for versioning
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["cafl4ds"]

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--cov",
  "--full-trace",
  "--cov-config=pyproject.toml",
  "--capture=tee-sys",
  "--html=docs/exported/pytest.html",
  "--junit-xml=docs/exported/pytest.xml",
  "--self-contained-html",
  "--showlocals",
]
testpaths = ["tests"]
log_cli = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.coverage.run]
branch = true
source = ["cafl4ds"]

[tool.coverage.html]
directory = "docs/exported/coverage"

[tool.coverage.xml]
output = "docs/exported/coverage.xml"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
strict = true
pretty = true
show_error_context = true
show_traceback = true

[tool.ruff]
fix = true
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "PLR",    # pylint recommendations
  "ANN002", # Missing type annotation:  *args
  "ANN003", # Missing type annotation: **kwargs
  "D104",   # Missing docstring in public package
]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort (replaces standalone isort)
  "UP",   # pyupgrade (replaces standalone pyupgrade)
  "C",    # flake8-comprehensions
  "B",    # flake8-bugbear
  "S",    # flake8-bandit
  "A",    # flake8-builtins
  "INP",  # flake8-no-pep420
  "PIE",  # flake8-pie
  "PL",   # pylint
  "ANN",  # flake8-annotations
  "D",    # pydocstyle
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Conventional-commits driven versioning. Commitizen reads the current version from
# the latest git tag (version_provider = scm, pairs with hatch-vcs) and, on `cz bump`,
# computes the next version from commit messages, writes the new tag, and updates the
# CHANGELOG. `major_version_zero` keeps breaking changes at a minor bump while < 1.0.
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag_format = "v$version"
major_version_zero = true
update_changelog_on_bump = true
# NB: changelog_incremental is deliberately NOT set. It is incompatible with the
# `cz changelog <version>` (rev_range) invocation both CI pipelines use to produce
# per-release notes ("--incremental cannot be combined with a rev_range"). The changelog
# is fully machine-generated, so regenerating it in full on each bump is correct and idempotent.
# `[skip ci]` stops the bump's own changelog commit from re-triggering the pipeline
# (and re-bumping). Publishing runs as a continuation of the bump job, not on the tag.
bump_message = "bump: version $current_version → $new_version [skip ci]"

# Dependency hygiene: flags unused / missing / transitive / misplaced dependencies
[tool.deptry]
known_first_party = ["cafl4ds"]
extend_exclude = ["noxfile.py"] # dev-only orchestration, not shipped code — don't scan it.

[tool.deptry.per_rule_ignores]
# headroom-ai is optional agent/dev tooling, intentionally not imported by the package.
DEP002 = ["headroom-ai"]
# pytest is imported by the test suite (the test/ dir) but is correctly a dev dependency.
DEP004 = ["pytest"]


# --- Tasks: Quality gate ----------------------------------------------------------------------------------------------

# Run all pre-commit hooks (ruff lint+format, mypy, file hygiene) over the whole repo.
[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files"
# no-commit-to-branch is a local commit-time guard (installed via `pre-commit install`);
# running it in `--all-files` fails whenever CI checks out `main` (e.g. the push-to-main
# run after a merge), with no protection gained.
env = { SKIP = "no-commit-to-branch" }
help = "Run all linting / formatting / type-check hooks."

# Dependency hygiene check (unused / missing / transitive / misplaced deps).
[tool.poe.tasks.deps-check]
cmd = "deptry ."
help = "Check dependency hygiene with deptry."

# Audit dependencies for known vulnerabilities using uv's native, lockfile-aware auditor.
# NOTE: `uv audit` is currently a uv preview feature; the flag opts in explicitly and
# silences the experimental warning. If you need a fully stable auditor, swap in pip-audit.
[tool.poe.tasks.audit]
cmd = "uv audit --preview-features audit-command"
help = "Audit dependencies for known security advisories."

# Run unit testing using pytest on a single interpreter. Generate a coverage report in
# different output formats (this is the canonical run that feeds docs/badges).
[tool.poe.tasks.test]
sequence = [
  { cmd = "pytest -n ${cpus} ${test}" },
  { cmd = "coverage xml" },
  { cmd = "coverage html" },
  { cmd = "coverage report" },
]
help = "Run unit testing and generate coverage report"
args = [
  { name = "cpus", multiple = false, positional = true, default = 1, help = "Number of cpus to use for xdist" },
  { name = "test", multiple = true, positional = true, default = "tests/unit", help = "Unit tests to run" }
]

# Run the test suite across all supported Python versions (matrix correctness, no coverage).
[tool.poe.tasks.test-all]
cmd = "nox -s tests"
help = "Run tests across all supported Python versions via nox."

# Export test artifacts
[tool.poe.tasks.export-test-artifacts]
sequence = [
  { cmd = "genbadge tests -i ${directory}/pytest.xml -o ${directory}/tests.svg" },
  { cmd = "genbadge coverage -i ${directory}/coverage.xml -o ${directory}/coverage.svg" },
]
help = "Generate test/coverage badges from exported artifacts"
args = [
  { name = "directory", default = "docs/exported", help = "Where to look for required input files, and where to put output artifacts" }
]

# --- Build & versioning -----------------------------------------------------------------------------------------------

# Build the distributable package (wheel + sdist) into dist/.
[tool.poe.tasks.build]
cmd = "uv build"
help = "Build the wheel + sdist into dist/."

# Bump the version from conventional commits: computes the next version, updates the
# CHANGELOG, commits it, and creates the git tag. Push commit + tag afterwards.
[tool.poe.tasks.bump]
cmd = "uv run python scripts/bump.py ${out}"
args = [{ name = "out", positional = true, default = "bump.env", help = "File to write state variables to" }]
help = "Bump version, push to remote, and write CI state to the specified file"

# Render the changelog without bumping (useful for previews / release notes).
[tool.poe.tasks.changelog]
cmd = "cz changelog"
help = "Render CHANGELOG.md from conventional commits."

# Use 'git ls-remote' to get the authoritative list of tags directly from the remote.
# This is non-destructive and ignores any potentially stale or incorrect local tags.
[tool.poe.tasks.get-latest-tag]
# commitizen reads the version from the latest git tag (version_provider = scm), returning a
# bare PEP440 version (e.g. 1.2.3, or 0.0.0 when there are no tags). This replaces a
# hand-rolled `git ls-remote | awk | sed | sort | tail` pipeline and also works locally.
cmd = "cz version -p"
help = "Print the current version (from the latest git tag) via commitizen."

# --- Documentation --------------------------------------------------------------------

# Build the documentation. If using Gitlab, pushing these docs is built directly into the CI pipeline.
# Note, need the output of `test` to include test report in docs, but not marked here -> enforced in CI
[tool.poe.tasks.docs]
shell = """
  cp README.md docs/index.md
  cp LICENSE.md docs/
  mkdocs build ${verbose:+ -v}
"""
help = "Build docs (make sure to first run the `test` task)."
args = [
  { name = "verbose", type = "boolean", help = "True for verbose output" },
]


# --- Utility ----------------------------------------------------------------------------------------------------------

[tool.poe.tasks.clean]
shell = """
  rm -rf \
    .coverage \
    .coverage.* \
    .mypy_cache \
    .pytest_cache \
    .ruff_cache \
    .nox \
    site \
    public \
    htmlcov \
    docs/exported \
    build \
    dist

  find . -type d -name "__pycache__" -exec rm -rf {} +
  find . -type f -name "*.py[cod]" -delete
"""
help = "Remove temporary files, caches, and build artifacts"
